[package]
name = "dxfplay"
version = "0.1.0"
authors = ["roman <romix.lab@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
dxf = { version = "0.3.0", features = ["serialize"] }

yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.9"

zmq = "0.9"

rmp = "0.8.7"
rmp-serde = "0.13.7"
byteorder = "1.3.2"